--- a/app/views/partials/_form_errors.html.erb
+++ b/app/views/partials/_form_errors.html.erb
@@ -5,7 +5,7 @@
     <div class="alert alert-danger">
       <button type="button" class="close" data-dismiss="alert">×</button>
       <div class="lead buffer-bottom">
-        В вашей форме <%= errors.count %> ошибок
+        <%= t('app.error', count: errors.count) %>
       </div>
 
       <ul>
